<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/loginFragment">

  <fragment
      android:id="@+id/registrationFragment"
      android:name="com.example.forum.registration.RegistrationFragment"
      android:label="@string/title_registration"
      tools:layout="@layout/registration_fragment" >
    <action
        android:id="@+id/action_registrationFragment_to_loginFragment"
        app:destination="@id/loginFragment" />
  </fragment>
  <fragment
      android:id="@+id/loginFragment"
      android:name="com.example.forum.login.LoginFragment"
      android:label="@string/title_login"
      tools:layout="@layout/login_fragment" >
    <action
        android:id="@+id/action_loginFragment_to_registrationFragment"
        app:destination="@id/registrationFragment" />
    <action
        android:id="@+id/action_loginFragment_to_sectionsListFragment"
        app:destination="@id/sectionsListFragment"
        app:popUpTo="@id/sectionsListFragment" />
  </fragment>
  <fragment
      android:id="@+id/sectionsListFragment"
      android:name="com.example.forum.sections.SectionsListFragment"
      android:label="@string/title_sections"
      tools:layout="@layout/sections_list_fragment" >
    <action
        android:id="@+id/action_sectionsListFragment_to_postsListFragment"
        app:destination="@id/postsListFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/sectionsListFragment" />
    <argument
        android:name="user"
        app:argType="com.example.forum.network.User" />
  </fragment>
  <fragment
      android:id="@+id/aboutFragment"
      android:name="com.example.forum.AboutFragment"
      android:label="@string/title_about_fragment"
      tools:layout="@layout/fragment_about" />
  <fragment
      android:id="@+id/postsListFragment"
      android:name="com.example.forum.posts.PostsListFragment"
      android:label="@string/title_posts_list"
      tools:layout="@layout/posts_list_fragment" >
    <action
        android:id="@+id/action_postsListFragment_to_postFragment"
        app:destination="@id/postFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/postsListFragment" />
    <action
        android:id="@+id/action_postsListFragment_to_postCreatorFragment"
        app:destination="@id/postCreatorFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/postsListFragment" />
    <argument
        android:name="user"
        app:argType="com.example.forum.network.User" />
    <argument
        android:name="section"
        app:argType="com.example.forum.network.Section" />
  </fragment>
  <fragment
      android:id="@+id/postFragment"
      android:name="com.example.forum.post.PostFragment"
      android:label="@string/app_name"
      tools:layout="@layout/post_fragment" >
    <action
        android:id="@+id/action_postFragment_to_postsListFragment"
        app:destination="@id/postsListFragment" />
    <argument
        android:name="user"
        app:argType="com.example.forum.network.User" />
    <argument
        android:name="postId"
        app:argType="long" />
  </fragment>
  <fragment
      android:id="@+id/postCreatorFragment"
      android:name="com.example.forum.post.PostCreatorFragment"
      android:label="@string/title_post_create"
      tools:layout="@layout/post_creator_fragment" >
    <action
        android:id="@+id/action_postCreatorFragment_to_postsListFragment"
        app:destination="@id/postsListFragment"
        app:popUpTo="@id/postsListFragment"
        app:popUpToInclusive="true" />
    <argument
        android:name="user"
        app:argType="com.example.forum.network.User" />
    <argument
        android:name="section"
        app:argType="com.example.forum.network.Section" />
  </fragment>
</navigation>