<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
        name="viewModel"
        type="com.example.forum.post.PostCreatorViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/padding_small"
      tools:context=".post.PostCreatorFragment">

    <EditText
        android:id="@+id/post_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeBig"
        android:hint="@string/post_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@={viewModel.postTitle}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Заголовок" />

    <EditText
        android:id="@+id/post_content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_content_hint"
        android:background="@drawable/border"
        android:padding="@dimen/padding_small"
        android:textSize="@dimen/textSize"
        android:inputType="text|textMultiLine"
        android:importantForAutofill="no"
        android:text="@={viewModel.postContent}"
        app:layout_constraintTop_toBottomOf="@+id/post_title_edit"
        tools:text="@string/content_text_example"/>

    <Button
        android:id="@+id/post_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/colorAccent"
        android:onClick="@{() -> viewModel.savePost() }"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>